jwt authentication in swagger added
